welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: '=>' expected but ';' found.
				case EAST <= gauche(); if (estFaceMur){droite(); return true}
                                                     ^SnakeBuggle:9: error: '=>' expected but ';' found.
				case WEST <= droite(); if (estFaceMur){gauche(); return true}
                                                     ^SnakeBuggle:11: error: illegal start of simple pattern
				case _ <= return false
                                          ^SnakeBuggle:12: error: '=>' expected but '}' found.
			}
                        ^SnakeBuggle:21: error: '=>' expected but ';' found.
			case EAST <= gauche(); avance(); gauche()
                                             ^SnakeBuggle:22: error: '=>' expected but ';' found.
			case WEST <= droite(); avance(); droite()
                                             ^SnakeBuggle:24: error: '=>' expected but '}' found.
		}
                ^